docker: disable additional non-x86 images
 - travis - doesn't support non-x8
 - centos7 - only AltArch, next release should have support
 - debian-8 based - docker hub issue?
 - ubuntu - image a bit old, maybe update to 18.04

Signed-off-by: Alex Bennée <alex.bennee@linaro.org>

--- a/tests/docker/Makefile.include
+++ b/tests/docker/Makefile.include
@@ -136,9 +136,16 @@ DOCKER_USER_IMAGES += debian-powerpc-user
 
 ifneq ($(ARCH),x86_64)
 
+# Don't include non-multiarch images
+DOCKER_PARTIAL_IMAGES += travis centos7
+
 ifeq ($(ARCH),aarch64)
 # no point having a cross compiler when it is the native one
 DOCKER_PARTIAL_IMAGES += debian-arm64-cross
+# hub.docker.com's older Debian images are not multiarch
+DOCKER_PARTIAL_IMAGES += debian-win32-cross debian-win64-cross
+# older Ubuntu's need fixing up as well
+DOCKER_PARTIAL_IMAGES += ubuntu
 endif
 
 # No MIPS cross-compilers in non-x86 Debian images, so use linux-user
