--- a/.travis.yml
+++ b/.travis.yml
@@ -117,6 +117,8 @@ matrix:
         apt:
           packages:
             - python-sphinx
+            - texinfo
+            - perl
 
     # Test out-of-tree builds
     - env:
