--- a/tests/tcg/aarch64/Makefile.target
+++ b/tests/tcg/aarch64/Makefile.target
@@ -18,4 +18,8 @@ run-fcvt: fcvt
 AARCH64_TESTS += pauth-1
 run-pauth-%: QEMU += -cpu max
 
+AARCH64_TESTS += lse-atomics
+lse-atomics: CFLAGS+=-march=armv8.1-a
+run-lse-atomics-%: QEMU += -cpu max
+
 TESTS:=$(AARCH64_TESTS)
